// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconListView should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-list-view "
  height={9}
  viewBox="0 0 9 9"
  width={9}
>
  <path
    className="fill-color"
    d="M0 5h9V4H0v1zm0 4h9V8H0v1zm0-9v1h9V0H0z"
    fill="#222"
    fillOpacity={1}
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconListView should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-list-view test"
  height={100}
  title="title"
  viewBox="0 0 9 9"
  width={200}
>
  <path
    className="fill-color"
    d="M0 5h9V4H0v1zm0 4h9V8H0v1zm0-9v1h9V0H0z"
    fill="#444"
    fillOpacity={0.2}
    fillRule="evenodd"
  />
</AccessibleSVG>
`;
